infra/k8s/bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bus
  template:
    metadata:
      labels:
        app: bus
    spec:
      containers:
      - name: bus
        image: obadaarnaout/blogbus
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: bus-srv
spec:
  selector:
    app: bus
  ports:
    - protocol: TCP
      name: bus
      port: 5000
      targetPort: 5000
